library/constraints/flux-require-service-account/samples/with-service-account.yaml
apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
kind: Kustomization
metadata:
  name: app
spec:
  sourceRef:
    kind: GitRepository
    name: app
  path: ./deploy/production
  serviceAccountName: "foobar"
